--- a/templates/history.html
+++ b/templates/history.html
@@ -4,25 +4,38 @@
 {% endblock %}
 
 {% block content %}
-
-<table>
-  {% for date,day in data.items() %}
-  <tr>
-
+  
+  <table border='1'>
+    {% for date,day in data.items() %}
     <tr>
-      <th rowspan="2">{{date}}</th>
-    {% for number in day['number'] %}
-      <td>{{number}}</td>
-    {% endfor %}
-    </tr>
 
-    <tr>
-    {% for amount in day['amount'] %}
-      <td>{{amount}}</td>
-    {% endfor %}
-    </tr>
+      <tr>
+        <th rowspan="2" class='head date'>{{date}}</th>
+        <th rowspan="2" class=' daily'>{{daily_capital[date]}}</th>
+        <td class='title'>Số</td>
 
-  </tr>
-  {% endfor %}
-</table>
+      {% for number,amount in won[date].items() %}
+        <td class='number won'>{{number}}</td>
+      {% endfor %}
+      {% for number,amount in lose[date].items() %}
+        <td class='number lose'>{{number}}</td>
+      {% endfor %}
+      </tr>
+
+      <tr>
+        <td class='title'>Trứng</td>
+        {% for number,amount in won[date].items() %}
+          <td class='amount'>{{amount}}</td>
+        {% endfor %}
+        {% for number,amount in lose[date].items() %}
+          <td class='amount'>{{amount}}</td>
+        {% endfor %}
+      </tr>
+
+    </tr>
+    {% endfor %}
+  </table>
+
+  <a href="/" ><button class="btn btn-primary">Trang chủ</button></a>
+  <a href="/insert"><button class="btn btn-primary">Nhập lịch sử</button></a>
 {% endblock %}
